--- a/homework01/templates/main.html
+++ b/homework01/templates/main.html
@@ -7,7 +7,15 @@
    <div>
        <h1> Главная Страница </h1>
        <p> Main page Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum, iusto libero blanditiis consequatur omnis ipsam repellendus nobis in doloribus, harum nam illum ea velit, enim quae animi iure quos odit.
-
+        Main page Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum, iusto libero blanditiis consequatur omnis ipsam repellendus nobis in doloribus, harum nam illum ea velit, enim quae animi iure quos odit.
        </p>
+
+       <div class="container-fluid">
+        <ul class="nav nav-pills ">
+            <li class="nav-item"><a href="/clothes/" class="nav-link">Одежда</a></li>
+            <li class="nav-item"><a href="/shoes/" class="nav-link">Обувь</a></li>
+        </ul>
+
+    </div>
    </div>
 {% endblock %} 
